# cloud-security-scanner

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: Doc_Tecnico_cloud-security-scanner.docx  Flow_cloud-security-scanner.html  scoring-methodology.md
reporter/: report_generator.py
scanners/: base.py
scanners/aws/: container_scanner.py  os_scanner.py  sg_scanner.py
scoring/: risk_scorer.py
tests/: test_sg_scanner.py
